fix overlapping text issues

--- a/components/events-list/events-list.scss
+++ b/components/events-list/events-list.scss
@@ -76,14 +76,14 @@
 
       display: flex;
       align-items: center;
-  
+
       @extend %subtitle-1;
-  
+
       @extend %background-filter-white;
       border-radius: 155px;
-  
+
       transition: background $simple-fade, color $simple-fade;
-  
+
       &:hover {
         background: $white;
         color: $purple;
@@ -114,8 +114,6 @@
   }
 
   &__text {
-    flex: 1;
-    
     @extend %body-1;
     color: $white-80;
 
