--- a/components/play-link/play-link.scss
+++ b/components/play-link/play-link.scss
@@ -9,6 +9,8 @@
   justify-content: center;
   column-gap: spacing(1);
 
+  margin-top: auto;
+
   @extend %body-1;
 
   border-radius: 82px;
